// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`common/component/module/article/button should render btnLabel if btnTitle is empty 1`] = `
<p
  className="is-centered c-type--p article-button hide-on-print"
>
  <a
    className="c-btn"
    onClick={[Function]}
    role="button"
    style={Object {}}
    title="Button label"
    type={null}
  >
    <span
      className="c-btn__label"
    >
      Button label
    </span>
  </a>
</p>
`;

exports[`common/component/module/article/button should render correctly 1`] = `
<p
  className="is-centered c-type--p article-button hide-on-print"
>
  <a
    className="c-btn"
    onClick={[Function]}
    role="button"
    style={Object {}}
    title="Button title"
    type={null}
  >
    <span
      className="c-btn__label"
    >
      Button label
    </span>
  </a>
</p>
`;

exports[`common/component/module/article/button should return null if content is empty 1`] = `null`;
